--- a/product.html
+++ b/product.html
@@ -13,6 +13,15 @@
         <script src="https://kit.fontawesome.com/1544791081.js" crossorigin="anonymous"></script>
     </head>
     <body>
+
+        <div id="Notification" class="not-hide">
+            <div class="not-body">
+                <button id="not_close_btn"><i class="fa-solid fa-xmark"></i></button>
+                <div id="not_content">
+                </div>
+            </div>
+        </div>
+
         <!--Navigation bar-->
         <section id="nav-bar">
             <a href="index.html" class="logo"><div id="logo">
@@ -47,22 +56,6 @@
 
         <section id="all-content">
 
-            <!---Pop Up-->
-            <div id="Pop-up" class="Pop_up_OFF">
-                <div id="login">
-                    <div id="form">
-                        <div><label for="Name">Enter Your Full Name:</label><input type="text" id="full_name" autocomplete="name" placeholder="Your Name"></div>
-                        <div><label for="Name">Enter Your Mobile Number:</label><input type="number" id="mobile_no" autocomplete="tel" max="9999999999" min="1111111111" required placeholder="Mobile Number"></div>
-                        <div id="check_box_container">
-                            <div id="check_box" class="correct_it"><label for="offers"><input type="checkbox"/>I agree to receive deals, offers and other details on my number.</label></div>
-                            <div id="check_box"><label for="offers"><input type="checkbox"/>I agree to terms and Condition.</label></div>
-                        </div>
-                        <Button id="user_creation">Submit</Button>
-                        <p>We respect your privacy & we are committed to protecting your personal information!</p>
-                    </div>
-                </div>
-            </div>
-            <!---Pop Up-->
             <!--Product Details Section 1-->
             <section id="details_section_1">
                 <div class="section_1_div Right_Half">
