--- a/product.html
+++ b/product.html
@@ -9,6 +9,9 @@
         <link href="product.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <!-- Add script in head -->
+<script src="https://cdn.razorpay.com/widgets/affordability/affordability.js">
+</script>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;1,100&family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/1544791081.js" crossorigin="anonymous"></script>
     </head>
@@ -109,12 +112,7 @@
                     </div>
 
                     <div id="offerandfreebie" class="left_half_div">
-                        <h3>Available Deals and Offers <i class="fa-solid fa-tags"></i> :</h3>
-                        <div class="oneoffer"><i class="fa-solid fa-tags"></i><p>3 interest free payments of ₹1083 with</p><div class="offerlogo" id="offerlogo_simpl"></div><div class="circlewithmark">!</div></div>
-                        <div class="oneoffer"><i class="fa-solid fa-tags"></i><p>10% off on Axis Bank Credit Card EMI Transactions</p><div class="circlewithmark">!</div></div>
-                        <div class="oneoffer"><i class="fa-solid fa-tags"></i><p>10% off on Flipkart Axis Bank Credit Card EMI Transactions</p><div class="circlewithmark">!</div></div>
-                        <div class="oneoffer"><i class="fa-solid fa-tags"></i><p>10% off on Citi Credit Card EMI Transactionsh</p><div class="circlewithmark">!</div></div>
-                        <div class="oneoffer"><i class="fa-solid fa-tags"></i><p>Get extra 10% off (price inclusive of cashback/coupon)</p><div class="circlewithmark">!</div></div>
+                    <div id="razorpay-affordability-widget"> </div>
                     </div>
 
                     <div id="quantitiesaddtocartH" class="left_half_div">
